objects/mmeWordStudyJ__c.object
<CustomObject><fields>
        <fullName>mmeStudy__c</fullName>
        <description>parent Study</description>
        <label>mmeStudy</label>
        <referenceTo>mmeStudy__c</referenceTo>
        <relationshipLabel>mmeWordStudies</relationshipLabel>
        <relationshipName>mmeWordStudies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>mmeWord__c</fullName>
        <label>mmeWord</label>
        <referenceTo>mmeWord__c</referenceTo>
        <relationshipLabel>mmeWordStudiesWord</relationshipLabel>
        <relationshipName>mmeWordStudiesWord</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>word_study__c</fullName>
        <formula>mmeStudy__r.Name &amp; mmeWord__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>word_study</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>false</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>false</enableSharing><enableStreamingApi>false</enableStreamingApi><label>mmeWordStudyJ</label><nameField>
        <label>WordStudyJ Name</label>
        <type>Text</type>
    </nameField><pluralLabel>mmeWordStudies</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>